Optimize with Virtual Threads and update docs